monticore-generator/src/test/resources/cocos/invalid/A4028/A4028.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4028;

grammar A4028 {

  A;

  B;

  E = a:A;

  astrule E = a:B;


}
